<resources>
    <string name="app_name">Insta Downloader</string>
    <string name="app_name_without_space">InstaDownloader</string>
    <string name="app_id_admob" translatable="false">ca-app-pub-3940256099942544~3419835294</string>
    <string name="banner_id_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="insta_word">Insta</string>
    <string name="downloader_word">Downloader</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_wrong_please_try_again">something wrong, please try again</string>
    <string name="splash_screen_hint_text">Download and Save your Favourite Posts, Stories, Reels and IGTVs.</string>
    <string name="by_mtma">BY MTMA</string>
    <string name="open_instagram_action">open Instagram</string>
    <string name="open_drawer_action">open drawer</string>
    <string name="close_drawer_action">close drawer</string>
    <string name="login_now_button_with_under_line"><u>Login now</u></string>
    <string name="downloads_title">Downloads</string>
    <string name="saved_posts_title">Saved Posts</string>
    <string name="how_to_use_title">How to Use</string>
    <string name="settings_title">Settings</string>
    <string name="rate_us_title">Rate us</string>
    <string name="share_title">Share</string>
    <string name="logout_title">Logout</string>
    <string name="download_button">DOWNLOAD</string>
    <string name="paste_button">PASTE</string>
    <string name="paste_link_button">PASTE LINK</string>
    <string name="see_all_button"><u>See all</u></string>
    <string name="login_button">Login</string>
    <string name="login_button_with_under_line"><u>Login</u></string>
    <string name="hint_for_displaying_stories_and_saved_posts">"Do you want to display and download your\n( Stories &amp; Saved Posts ) ?</string>
    <string name="hint_for_past_url">Paste the Instagram link here.</string>
    <string name="toast_click_back_again_to_exit">click BACK again to exit.</string>
    <string name="login_to_display_your_stories_now">Login Now to Download Your Stories !</string>
    <string name="no_stories">No stories found</string>
    <string name="error_loading_instagram_stories">Error when loading stories !</string>
    <string name="please_check_internet_connection_then_tap_refresh">Please, check your internet connection and try again.</string>
    <string name="ask_user_to_log_in_for_download_post">You must login to download this media.</string>
    <string name="ask_user_to_log_in_for_download_story">You must login to download this story.</string>
    <string name="confirm_log_out">Confirm Logout ?</string>
    <string name="hint_search_text">Search in Stories</string>
    <string name="toast_successfully_signed_out">successfully signed out</string>
    <string name="toast_paste_the_url_first">paste the url first</string>
    <string name="toast_not_valid_url">not valid url</string>
    <string name="toast_media_saved_successfully">media saved successfully</string>
    <string name="toast_no_link_in_clipboard">no url in your clipboard</string>
    <string name="media_already_downloaded_message">Media already downloaded. Do you want to delete and download it again ?</string>
    <string name="download_again_button">Download Again</string>
    <string name="feedback_title">Feedback</string>
    <string name="hint_for_type_email_address">email address (optional).</string>
    <string name="hint_for_type_feedback_message">write your message here.</string>
    <string name="can_not_send_empty_message">can\'t send empty message !</string>
    <string name="enter_valid_email">please, enter a valid email.</string>
    <string name="thank_you">Thank you for your feedback.</string>
    <string name="send_button">Send</string>
    <string name="empty_view">There is no media to display</string>
    <string name="placeholder_media_empty_text">This media has no content text</string>
    <string name="bottom_sheet_repost">Repost</string>
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_copy_text_and_hashtags">Copy Text &amp; Hashtags</string>
    <string name="bottom_sheet_copy_text">Copy Text (only)</string>
    <string name="bottom_sheet_copy_hashtag">Copy Hashtags (only)</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="toast_can_not_repost_this_media">can\'t repost this media</string>
    <string name="toast_can_not_share_this_media">can\'t share this media</string>
    <string name="toast_no_text_or_hashtags_to_copy">no text or hashtags to copy</string>
    <string name="toast_no_text_to_copy">no text to copy</string>
    <string name="toast_no_hashtags_to_copy">no hashtags to copy</string>
    <string name="toast_text_and_hashtags_copied">text and hashtags copied</string>
    <string name="toast_text_copied">text copied</string>
    <string name="toast_hashtags_copied">hashtags copied</string>
    <string name="toast_deleted_successfully">deleted successfully</string>
    <string name="media_has_no_text_ot_hashtags">This media has no text or hashtags</string>
    <string name="login_to_display_saved_posts">Login first to display your saved posts</string>
    <string name="no_saved_posts">You have no saved posts to display</string>
    <string name="unknown_error">Something wrong, please try again</string>
    <string name="refresh_button_with_under_line"><u>Refresh</u></string>
    <string name="toast_select_item_first">select item first</string>
    <string name="download_post">Download Post</string>
    <string name="download_post_step_1">1) Inside Instagram App click on Share</string>
    <string name="download_post_step_2">2) Select Insta Downloader App</string>
    <string name="download_post_step_3">3) Download will start automatically</string>
    <string name="download_post_step_4">1) Inside Instagram App click on Copy</string>
    <string name="download_post_step_5">2) Go to InstaDownloader App and PASTE LINK</string>
    <string name="download_post_step_6">3) Click on DOWNLOAD to start downloading</string>
    <string name="or_word">Or</string>
    <string name="download_story">Download Story</string>
    <string name="download_story_step_1">1) Inside Instagram App click on Share to…</string>
    <string name="download_story_step_2">2) Select Insta Downloader App</string>
    <string name="download_story_step_3">3) Download will start automatically</string>
    <string name="download_story_step_4">1) Inside Instagram App click on Copy link</string>
    <string name="download_story_step_5">2) Go to Insta Downloader App and Past Link</string>
    <string name="download_story_step_6">3) Click on Download to start downloading</string>
    <string name="download_story_step_7">1) Click on Login to display stories</string>
    <string name="download_story_step_8">2) All your stories will appear here</string>
    <string name="general_title">General</string>
    <string name="privacy_title">Privacy</string>
    <string name="display_saved_posts_label">Display Saved Posts</string>
    <string name="language_label">Languages</string>
    <string name="clear_cache_label">Clear Cache</string>
    <string name="settings_category_general_language_default">En</string>
    <string name="settings_category_general_language_arabic">Ar</string>
    <string name="settings_category_general_language_english_title">English</string>
    <string name="settings_category_general_language_arabic_title">Arabic</string>
    <string name="clear_cache">"cache deleted : %1$s Mb"</string>
    <string name="toast_error_when_deleting_cache">error when deleting cache</string>
    <string name="privacy_police_title">Privacy Police</string>
    <string name="privacy_police_content_title" translatable="false">Welcome to InstaDownloader App \n Update in : 1-Aug-2022</string>
    <string name="privacy_police_introduction_title" translatable="false">Introduction</string>
    <string name="privacy_police_introduction_body" translatable="false">1) We takes Users\' privacy very seriously, and We are committed to protecting and respecting Users\' privacy. That value powers all of the decisions We make, including how We collect, use, share, store and respect Users\' personal data.
        \n2) This Privacy Policy (hereinafter referred to as "Policy") applies to Users (hereinafter referred to as "You" or "Users") of our InstaDownloader App. It is important that You read this Policy together with any other privacy policies or fair processing policies We may provide on specific occasions so that You are fully aware of when, why, and how We collect and process your personal data. If You disagree with this Policy in whole or part, You are entitled to terminate using our Apps at any time.
        \n3) We reserve the right to amend this Policy or related agreements at any time without notice, which shall take effect and apply immediately. If You disagree, You have the right to stop the Services agreed herein. Once the changes of our agreements have been published, You continually using ours Services are deemed to have fully read, understood, and accepted the changed agreements, and shall abide by such agreements.
        \n4) This Policy dose not apply to the following cases:
        \n(i) Any information or personal data collected by any third party services, products, applications, websites, and/or platforms, regardless of whether they are accessible through our Apps.
        \n(ii) In such circumstances, You should refer directly to the Privacy Policies for the relevant third party.
    </string>
    <string name="privacy_police_data_controller_title" translatable="false">Data Controller and Data Processor</string>
    <string name="privacy_police_data_controller_body" translatable="false">1) We Limited is both the data controller and data processor, who determines the purposes and methods of the data processing concerning your personal data processing for your use of our services. If You have any questions, You can contact us by mahmoudtharwat909090@gmil.com
    </string>
    <string name="privacy_police_personal_data_title" translatable="false">Personal Data We Collect</string>
    <string name="terms_of_use_title">Terms of Use</string>
</resources>