<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    android:layout_margin="28dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_language_background">



    <TextView
        android:id="@+id/log_in_and_out_dialog_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/black"
        tools:text="@string/confirm_log_out"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/log_in_and_out_dialog_cancel_button"
            style="@style/text_button"
            android:textAllCaps="true"
            android:text="@string/cancel_button"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/log_in_and_out_dialog_ok_button"
            style="@style/text_button"
            android:text="@string/ok_button"
            android:textAllCaps="true" />

    </LinearLayout>


</LinearLayout>

